05-private-cluster-network-server/all.yaml
apiVersion: v1
kind: Gateway
metadata:
    name: igw
spec:
    bindPublicIpAddress: 10.10.0.50    # パブリック側のIPアドレスでアクセスを許可
    internalServerName: server-50        # サーバーの名前
    internalVirtualNetwork: private      # 内部側の仮想ネットワーク
    remoteCIDR: 10.10.0.0/16           # 接続を許すリモートのIPアドレス
    serverPorts:                         # リクエストを転送するポート番号のリストを以下に記述する
        - ssh                            # sshとhttpの通信を許可、それ以外は禁止    
        - http
