05-private-cluster-network-server/gateway.yaml
apiVersion: v1
kind: Gateway
metadata:
    name: igw
spec:
    bindPublicIpAddress: 192.168.1.180   # パブリック側のIPアドレスでアクセスを許可
    internalServerName: server-50        # サーバーの名前
    internalVirtualNetwork: net-private  # 内部側の仮想ネットワーク
    remoteCIDR: 0.0.0.0/0                # 接続を許すリモートのIPアドレス
    serverPorts:                         # リクエストを転送するポート番号のリストを以下に記述する
        - ssh                            # sshとhttpの通信を許可、それ以外は禁止    
        - http
